[package]
name = "New_Minor"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
csv = "1.2"
url = "2.4"
publicsuffix = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
linfa = "0.6"
linfa-logistic = "0.6"
linfa-preprocessing = "0.6"
tokio = { version = "1", features = ["full"] }
